--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
         <activity
-            android:name=".LiveCardMenuActivity"
-            android:theme="@style/MenuTheme" />
+            android:name=".LiveCardMenuActivity"/>
 
         <service
             android:name=".AftersalesCheckSheetDemoService"
