--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,15 @@
 
     <uses-sdk
         android:minSdkVersion="19"
-        android:targetSdkVersion="19"
-        />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
-        <activity
-            android:name=".LiveCardMenuActivity"/>
+        android:label="@string/app_name" >
+        <activity android:name=".LiveCardMenuActivity" />
 
-        <service
+        <!--service
             android:name=".AftersalesCheckSheetDemoService"
             android:icon="@drawable/ic_glass_logo"
             android:label="@string/title_activity_aftersales_check_sheet_demo_service" >
@@ -25,7 +23,21 @@
             <meta-data
                 android:name="com.google.android.glass.VoiceTrigger"
                 android:resource="@xml/voice_trigger" />
-        </service>
+        </service-->
+
+        <activity
+            android:name=".MainActivity"
+            android:icon="@drawable/ic_glass_logo"
+            android:label="@string/title_activity_main"
+            android:immersive="true">
+            <intent-filter>
+                <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.google.android.glass.VoiceTrigger"
+                android:resource="@xml/voice_trigger" />
+        </activity>
     </application>
 
 </manifest>
