--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_inchcape_logo"
         android:label="@string/app_name" >
         <activity android:name=".LiveCardMenuActivity" />
 
         <service
             android:name=".AftersalesCheckSheetDemoService"
-            android:icon="@drawable/ic_glass_logo"
+            android:icon="@drawable/ic_inchcape_logo"
             android:label="@string/title_activity_aftersales_check_sheet_demo_service" >
             <intent-filter>
                 <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
@@ -33,14 +33,14 @@
 
         <activity
             android:name=".MainActivity"
-            android:icon="@drawable/ic_glass_logo"
+            android:icon="@drawable/ic_inchcape_logo"
             android:immersive="true"
             android:label="@string/title_activity_main" >
         </activity>
 
         <activity
             android:name=".QRCodeActivity"
-            android:icon="@drawable/ic_glass_logo"
+            android:icon="@drawable/ic_inchcape_logo"
             android:label="@string/title_activity_main" >
         </activity>
     </application>
