--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.glass.permission.DEVELOPMENT" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -37,11 +38,22 @@
             android:immersive="true"
             android:label="@string/title_activity_main" >
         </activity>
-
         <activity
             android:name=".QRCodeActivity"
             android:icon="@drawable/ic_inchcape_logo"
-            android:label="@string/title_activity_main" >
+            android:label="@string/ScanQRCode" >
+        </activity>
+        <activity
+            android:name=".SlidesActivity"
+            android:icon="@drawable/ic_inchcape_logo"
+            android:label="@string/title_activity_slides" >
+            <intent-filter>
+                <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.google.android.glass.VoiceTrigger"
+                android:resource="@xml/voice_trigger" />
         </activity>
     </application>
 
